--- a/TransferLearning_FeatureExtractor.ipynb
+++ b/TransferLearning_FeatureExtractor.ipynb
@@ -268,7 +268,11 @@
       "metadata": {
         "id": "33MalFoM5pTX",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "46b1b8bd-a243-41c1-99bc-61e322c53149",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
       },
       "source": [
         "img_data_list=[] # created an empty list for images to be loaded\n",
@@ -295,18 +299,36 @@
         "img_data=img_data[0]\n",
         "print (img_data.shape)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Loaded the images of dataset-cats\n",
+            "\n",
+            "Loaded the images of dataset-dogs\n",
+            "\n",
+            "Loaded the images of dataset-horses\n",
+            "\n",
+            "Loaded the images of dataset-Humans\n",
+            "\n",
+            "(808, 1, 224, 224, 3)\n",
+            "(1, 808, 224, 224, 3)\n",
+            "(808, 224, 224, 3)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LlZmTqYG5raH",
         "colab_type": "code",
-        "outputId": "40aede54-8e3c-4de9-a9d5-473c5479c404",
+        "outputId": "4da315e5-9fa9-4093-9a20-496e94cdbfc8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 68
         }
       },
       "source": [
@@ -329,14 +351,19 @@
         "#Shuffle the dataset\n",
         "x,y = shuffle(img_data,Y, random_state=2)\n",
         "# Split the dataset\n",
-        "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=2)\n"
+        "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=2)\n",
+        "\n",
+        "print(X_train.shape)\n",
+        "print(X_test.shape)\n"
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "808\n"
+            "808\n",
+            "(646, 224, 224, 3)\n",
+            "(162, 224, 224, 3)\n"
           ],
           "name": "stdout"
         }
@@ -347,28 +374,30 @@
       "metadata": {
         "id": "KmH_k5ps5wAf",
         "colab_type": "code",
-        "outputId": "8413a45c-0243-4873-954d-3901d6047436",
+        "outputId": "12495748-0d38-4f26-fe24-77a1a510739c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 955
+          "height": 918
         }
       },
       "source": [
         "image_input = Input(shape=(224, 224, 3)) # shape of a single image\n",
         "\n",
-        "model = VGG16(input_tensor=image_input, include_top=True,weights='imagenet') # load VGG-16 model with 'top = true'\n",
+        "model = VGG16(input_tensor=image_input, \n",
+        "              include_top=True,\n",
+        "              weights='imagenet') # load VGG-16 model with 'top = true'\n",
+        "\n",
         "model.summary()"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg16_weights_tf_dim_ordering_tf_kernels.h5\n",
-            "550830080/553467096 [============================>.] - ETA: 0s_________________________________________________________________\n",
+            "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_1 (InputLayer)         (None, 224, 224, 3)       0         \n",
+            "input_2 (InputLayer)         (None, 224, 224, 3)       0         \n",
             "_________________________________________________________________\n",
             "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
             "_________________________________________________________________\n",
@@ -428,7 +457,7 @@
       "metadata": {
         "id": "C6Zbx2ok54Av",
         "colab_type": "code",
-        "outputId": "91ad2ad9-9fdb-4d73-c892-33b8013580b6",
+        "outputId": "b39f19ed-abb6-4039-dda4-680f3f886dfd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 918
@@ -437,12 +466,15 @@
       "source": [
         "last_layer = model.get_layer('fc2').output\n",
         "#x= Flatten(name='flatten')(last_layer)\n",
-        "out = Dense(num_classes, activation='softmax', name='output')(last_layer)\n",
+        "out = Dense(num_classes, \n",
+        "            activation='softmax', \n",
+        "            name='output')(last_layer)\n",
+        "\n",
         "custom_vgg_model = Model(image_input, out)\n",
         "custom_vgg_model.summary()\n",
         "\n"
       ],
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +482,7 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_1 (InputLayer)         (None, 224, 224, 3)       0         \n",
+            "input_2 (InputLayer)         (None, 224, 224, 3)       0         \n",
             "_________________________________________________________________\n",
             "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
             "_________________________________________________________________\n",
@@ -510,7 +542,7 @@
       "metadata": {
         "id": "EZTDo98uqvsX",
         "colab_type": "code",
-        "outputId": "23cc970e-d930-45f2-b8b9-efa08dba7621",
+        "outputId": "301fd84c-40aa-469e-c6be-72dc41033fc7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 918
@@ -525,7 +557,7 @@
         "\n",
         "custom_vgg_model.compile(loss='categorical_crossentropy',optimizer='rmsprop',metrics=['accuracy'])"
       ],
-      "execution_count": 11,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,7 +565,7 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_1 (InputLayer)         (None, 224, 224, 3)       0         \n",
+            "input_2 (InputLayer)         (None, 224, 224, 3)       0         \n",
             "_________________________________________________________________\n",
             "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
             "_________________________________________________________________\n",
