--- a/TransferLearning_FeatureExtractor.ipynb
+++ b/TransferLearning_FeatureExtractor.ipynb
@@ -41,7 +41,7 @@
         "drive.mount('/content/drive')\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,11 +61,11 @@
       "metadata": {
         "id": "XzCmD37zeJSl",
         "colab_type": "code",
+        "outputId": "fe66afb8-ea41-4399-85da-70e10259649f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fe66afb8-ea41-4399-85da-70e10259649f"
+        }
       },
       "source": [
         "# Upload data\n",
@@ -77,7 +77,7 @@
         "  zip.extractall()\n",
         "  print('done')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
         "!pip install tensorflow==1.3.0\n",
         "!pip install keras==2.0.7"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,7 @@
         "from sklearn.utils import shuffle\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,9 +231,10 @@
         "x = np.expand_dims(x, axis=0) # expand dimension\n",
         "print (x.shape)\n",
         "x = preprocess_input(x)\n",
-        "print('Input image shape:', x.shape)"
+        "print('Input image shape:', x.shape)\n",
+        "\n"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +300,7 @@
         "img_data=img_data[0]\n",
         "print (img_data.shape)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +357,7 @@
         "print(X_train.shape)\n",
         "print(X_test.shape)\n"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +390,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +475,7 @@
         "custom_vgg_model.summary()\n",
         "\n"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,12 +553,11 @@
         "for layer in custom_vgg_model.layers[:-1]:\n",
         "\tlayer.trainable = False\n",
         "\n",
-        "custom_vgg_model.layers[3].trainable\n",
         "custom_vgg_model.summary()\n",
         "\n",
         "custom_vgg_model.compile(loss='categorical_crossentropy',optimizer='rmsprop',metrics=['accuracy'])"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +640,7 @@
         "\n",
         "print(\"[INFO] loss={:.4f}, accuracy: {:.4f}%\".format(loss,accuracy * 100))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -701,7 +701,7 @@
         "#print plt.style.available # use bmh, classic,ggplot for big pictures\n",
         "plt.style.use(['classic'])"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
